packages/isar_generator/test/errors/class/constructor_unknown_parameter.dart

import 'package:isar/isar.dart';

@collection
class Model {
  Model(this.prop1);

  Id? id;

  final String prop1;
}
